* ExternalContextHolder now uses a ThreadLocal instead of an InheritableThreadLocal (SWF-206).

Package org.springframework.webflow.conversation
* The default value of the maxConversations property of the SessionBindingConversationManager is
  now 5. It used to be -1 (unlimited).
* Added getConversationIdGenerator and getMaxConversations methods to SessionBindingConversationManager.

Package org.springframework.webflow.engine
* The methods getMatchingCriteria, getExecututionCriteria, getTargetStateResolver, and canExecute
  of the Transition class have been made public (SWF-209).

Package org.springframework.webflow.execution.factory
* The getHolder method on ConditionalFlowExecutionListenerLoader is now private. It has a package
  private return type, so there is no use in it being protected.

Package org.springframework.webflow.execution.repository
* Fixed a bug in FlowExecutionContinuationGroup. It was not correctly handling an update of a
  continuation (SWF-211).
* The default value for the maxContinuations property of the ContinuationFlowExecutionRepository
  is now 30. It used to be -1 (unlimited).
* Method getConversationManager of AbstractConversationFlowExecutionRepository is now public.

Changes in version 1.0 (25.10.2006)
-----------------------------------

Package org.springframework.webflow.action
* Fixed bug in FormAction where the binder was not properly initialized in all cases (SWF-193).

Package org.springframework.webflow.definition.registry
* Added createFlowDefinitionRegistry hook method to AbstractFlowDefinitionRegistryFactoryBean.

Package org.springframework.webflow.engine
* Removed END_STATE_VIEW_FLAG_PARAMETER from TextToViewSelector. As a result, the endingViewSelector
  method of AbstractFlowBuilder was also removed.
* Removed newDefaultFlowServiceLocator method from AbstractFlowBuildingFlowRegistryFactoryBean. 
* Fixed bug in RefreshableFlowDefinitionHolder. It was not correctly reloading flows when resources
  changed.